@@ -1,4 +1,5 @@
 2.2.5
+ * Make randompartitioner work with new vnode allocation (CASSANDRA-12647)
  * Add algorithmic token allocation (CASSANDRA-7032)
  * maxPurgeableTimestamp needs to check memtables too (CASSANDRA-9949)
  * Apply change to compaction throughput in real time (CASSANDRA-10025)
